fixed add recipe form values in html

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <label>Prep time</label>
           <input
             placeholder="Prep time"
-            value="Cooking time"
+            value=""
             required
             name="cookingTime"
             type="number"
@@ -297,7 +297,7 @@
           <label>Servings</label>
           <input
             placeholder="Servings"
-            value="Servings"
+            value=""
             required
             name="servings"
             type="number"
